<resources>
    <string name="app_name">AdministrationTask</string>

    <string name="background_view">#eaeaec</string>

    <string name="btn_cancel">Cancel</string>

    <string name="lbl_title_modal_list_months">Select a month</string>
    <string name="lbl_title_card_progress">Progress</string>
    <string name="lbl_title_card_complete">Complete</string>
    <string name="lbl_today">Today</string>

    <string name="lbl_card_name_task"> tasks</string>

    <string name="lbl_tab_title_progress">Task in progress</string>
    <string name="lbl_tab_title_complete">Task complet</string>
    <string name="lbl_title_chart_task">Tasks</string>

    <string name="lbl_title_new_project">Add New Project</string>
    <string name="lbl_field_name_project">Project name</string>
    <string name="btn_create_project">Create project</string>
    <string name="msg_confirmation_create_project">Are you sure to create project?</string>
    <string name="msg_error_create_project">Error to create project!</string>
    <string name="msg_confirmation_ready_create_project">Project created!</string>
    <string name="btn_confirmation_positive">Ok</string>
    <string name="btn_confirmation_negative">Cancel</string>

    <string name="lbl_title_new_task">Add New Task</string>
    <string name="lbl_field_name_task">Task name</string>
    <string name="lbl_field_date">Task Date</string>
    <string name="lbl_field_hour">Task Hour</string>
    <string name="btn_create_task">Create task</string>

    <string name="lbl_chart_complete">complete</string>
    <string name="lbl_chart_progress">in progress</string>

    <string name="lbl_alert_confirmation_update_task">Did you complete this task?</string>
</resources>