<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/padding_view"
    android:background="@color/background_view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_view"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_view"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_post_add"
                android:tint="@color/blue_background"
                android:layout_marginRight="@dimen/padding_view"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeTitles"
                android:text="@string/lbl_title_new_project"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeLabelFields"
            android:text="@string/lbl_field_name_project"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txt_new_name_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_fields"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/padding_view">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/ThemeLabelFields"
                android:text="@string/lbl_title_new_task"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add_new_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_baseline_playlist_add"
                android:drawableTint="@color/white"
                android:background="@drawable/border_form_buttoms"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lst_new_project_task"
            android:layout_width="match_parent"
            android:background="@drawable/border_list_new_task"
            android:layout_height="470dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_view"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_create_new_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_form_buttoms"
            android:theme="@style/ThemeFormButtons"
            android:text="@string/btn_create_project"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_view"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel_new_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_form_buttoms_cancel"
            android:theme="@style/ThemeFormButtonsCancel"
            android:text="@string/btn_cancel"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>