<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_view"
    android:background="@color/background_view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeLabelFields"
            android:text="@string/lbl_title_new_task"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txt_name_new_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_fields"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeLabelFields"
            android:text="@string/lbl_field_date"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/txt_date_new_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:background="@drawable/border_fields"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_view"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_modal_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".8"
                android:drawableStart="@drawable/ic_baseline_calendar"
                android:background="@drawable/border_buttom_modals"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeLabelFields"
            android:text="@string/lbl_field_hour"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/txt_date_new_hour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:background="@drawable/border_fields"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_view"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_modal_clock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".8"
                android:drawableStart="@drawable/ic_baseline_time"
                android:background="@drawable/border_buttom_modals"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:padding="@dimen/padding_view">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel_new_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border_form_buttoms_cancel"
                android:theme="@style/ThemeFormButtonsCancel"
                android:text="@string/btn_cancel"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_view"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_create_new_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border_form_buttoms"
                android:theme="@style/ThemeFormButtons"
                android:text="@string/btn_create_task"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>