<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background_view"
        android:padding="@dimen/padding_view">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_day_today"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/ThemeTitles"
                android:text="Nov 17, 2022"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_select_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_buttons"
                    android:padding="@dimen/padding_view"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_calendar"
                    android:drawablePadding="@dimen/size_drawable_padding"
                    android:text="November"/>

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_view">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lst_days_mount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_weight="1">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="@dimen/elevation_card"
                    app:cardCornerRadius="@dimen/radius_card">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_view"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/size_image_card"
                            android:layout_height="@dimen/size_image_card"
                            android:background="@mipmap/progress_task"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/ThemeTitleCard"
                                android:text="@string/lbl_title_card_progress"/>

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/txt_task_progress"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/ThemeTextInformation"
                                android:text="14 task"/>

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_weight="1">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="@dimen/elevation_card"
                    app:cardCornerRadius="@dimen/radius_card">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/size_image_card"
                            android:layout_height="@dimen/size_image_card"
                            android:background="@mipmap/done"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/padding_view"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/ThemeTitleCard"
                                android:text="@string/lbl_title_card_complete"/>

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/txt_task_complete"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/ThemeTextInformation"
                                android:text="14 task"/>

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_date_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ThemeSubTitles"
            android:text="@string/lbl_today"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tb_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="@color/blue_background">

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_tab_title_progress"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_tab_title_complete"/>

        </com.google.android.material.tabs.TabLayout>

        <FrameLayout
            android:id="@+id/fm_tab_task"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_view"
        android:gravity="right|bottom">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_new_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background_form_buttons"
            android:src="@drawable/ic_baseline_playlist_add" />

    </RelativeLayout>


</RelativeLayout>